# mat3

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  params.py
bench/: CMakeLists.txt  chen2020.cpp  slicing.cpp  triples.cpp
src/: CMakeLists.txt  bgv.c  bgv.h  libbgv.c  libbgv.h  msg_mpz.c  msg_mpz.h  random.c  random.h  ring_hexl.cpp  ring_hexl.h  ring_i64.c  ring_i64.h  triples.c  triples.h  util.c  util.h
tests/: CMakeLists.txt  bgv.c  msg_mpz.c  random.c  ring_i64.c  run.sh  triples.c
